--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2,7 +2,6 @@
 450px mobile
 768px tablet
 992px desktop
-1280px full-hd
 */
 
 html {
@@ -155,7 +154,7 @@ body {
 }
 
 .gallery__image {
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     object-fit: cover;
     font-family: 'object-fit: cover;';
